updates to the loader

--- a/logging.ini
+++ b/logging.ini
@@ -5,7 +5,7 @@ keys=default_formatter
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
 
 [handlers]
-keys=console, file_handler
+keys=console,vdl_handler,vdl_status_handler,queue_manager_handler
 
 [handler_console]
 class=logging.StreamHandler
@@ -13,15 +13,46 @@ args=(sys.stdout,)
 level=INFO
 formatter=default_formatter
 
-[handler_file_handler]
+[handler_vdl_status_handler]
 class=logging.FileHandler
-args=("load-es.log", "w")
+args=("/var/log/vdl/vdl_status.log","a")
+level=INFO
+formatter=default_formatter
+
+[handler_vdl_handler]
+class=logging.FileHandler
+args=("/var/log/vdl/vdl.log","a")
+level=INFO
+formatter=default_formatter
+
+[handler_queue_manager_handler]
+class=handlers.RotatingFileHandler
+args=("/var/log/vdl/queue_manager.log","a", 10000000, 5)
 level=INFO
 formatter=default_formatter
 
 [loggers]
-keys=root
+keys=root,vdl,vdl_status,queue_manager
 
 [logger_root]
 level=INFO
-handlers=console, file_handler
+handlers=console
+propagate=0
+
+[logger_vdl_status]
+level=INFO
+handlers=vdl_status_handler
+propagate=0
+qualname=vdl_status
+
+[logger_vdl]
+level=INFO
+handlers=vdl_handler
+propagate=0
+qualname=vdl
+
+[logger_queue_manager]
+level=INFO
+handlers=queue_manager_handler
+propagate=0
+qualname=queue_manager
